--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ plugins {
 group = 'com.melluh'
 version = '1.0.0'
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = '1.11'
+targetCompatibility = '1.11'
 
 repositories {
 	mavenLocal()
@@ -15,9 +15,9 @@ repositories {
 }
 
 dependencies {
-	implementation("io.vertx:vertx-core:4.1.5")
-	implementation("io.vertx:vertx-web:4.1.5")
+	implementation("com.melluh:simple-http-server:1.0.0")
 	implementation("org.xerial:sqlite-jdbc:3.36.0.3")
+	implementation("org.json:json:20210307")
 }
 
 jar {
