--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,17 @@
+# Gradle
 .gradle
-/build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+build/
+bin/
 
 # Eclipse
 .classpath
 .project
-bin/
 .settings/
 
-# rtsp-recorder files
+# IntelliJ IDEA
+.idea/
+
+# Application
 config.json
 recordings/
 data.db
