--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,12 @@ repositories {
 }
 
 dependencies {
-	implementation("org.tinylog:tinylog-api:2.4.1")
-	implementation("org.tinylog:tinylog-impl:2.4.1")
+	implementation "org.tinylog:tinylog-api:2.4.1"
+	implementation "org.tinylog:tinylog-impl:2.4.1"
 
-	implementation("com.melluh:simple-http-server:1.1.0")
-	implementation("org.xerial:sqlite-jdbc:3.36.0.3")
-	implementation("org.json:json:20210307")
+	implementation "com.melluh:simple-http-server:1.1.0"
+	implementation "org.xerial:sqlite-jdbc:3.36.0.3"
+	implementation "com.grack:nanojson:1.7"
 }
 
 jar {
