--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 	implementation "com.grack:nanojson:1.7"
 }
 
+build {
+	dependsOn shadowJar
+}
+
 jar {
 	manifest {
 		attributes 'Main-Class': 'com.melluh.rtsprecorder.RtspRecorder'
